syntax = "proto3";

option csharp_namespace = "RecordsManagement_Client";

service AuthenticationService {
	rpc Login (AdminModel) returns (ResponseModel);
	rpc ChangeAccDetails (UpdateAdminModel) returns (ResponseModel);
	rpc Logout (AdminModel) returns (ResponseModel);
}

message ResponseModel {
	int32 Error = 1;
	string message = 2;
}

message AdminModel {
	string AdminName = 1;
	string AdminPass = 2;
	optional int32 Id = 3; 
}

message UpdateAdminModel {
	string currAdminName = 1;
	string currAdminPass = 2;
	optional string newAdminName = 3;
	optional string newAdminPass = 4;
}